slight changes after transfer

--- a/pre-processing.ipynb
+++ b/pre-processing.ipynb
@@ -8,27 +8,28 @@
     "\n",
     "##  Machine Learning Experiment 1: Classifying books by titles and other metadata\n",
     "\n",
-    "Team: Rachel Hendery, Tomas Trescak, Michael Falk, Simon Burrows\n",
+    "Team: Rachel Hendery, Tomas Trescak, Katie McDonough, Michael Falk, Simon Burrows\n",
     "\n",
     "##  Module 1: pre-processing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load libraries\n",
     "\n",
     "import pandas as pd # for importing and manipulating data\n",
-    "import nltk # for processing strings\n",
+    "from nltk.tokenize import word_tokenize # \n",
+    "from from nltk.stem.snowball import SnowballStemmer\n",
     "from sklearn.feature_extraction.text import CountVectorizer # for creating term-document matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +115,7 @@
        "4                     n.pl.                  1   Belles-Lettres  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,101 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[['abrégé',\n",
-       "  'de',\n",
-       "  \"l'histoire\",\n",
-       "  'générale',\n",
-       "  'des',\n",
-       "  'voyages',\n",
-       "  ',',\n",
-       "  'contenant',\n",
-       "  'ce',\n",
-       "  \"qu'il\",\n",
-       "  'y',\n",
-       "  'a',\n",
-       "  'de',\n",
-       "  'plus',\n",
-       "  'remarquable',\n",
-       "  ',',\n",
-       "  'de',\n",
-       "  'plus',\n",
-       "  'utile',\n",
-       "  'et',\n",
-       "  'de',\n",
-       "  'mieux',\n",
-       "  'avéré',\n",
-       "  'dans',\n",
-       "  'les',\n",
-       "  'pays',\n",
-       "  'où',\n",
-       "  'les',\n",
-       "  'voyageurs',\n",
-       "  'ont',\n",
-       "  'pénétré',\n",
-       "  ';',\n",
-       "  'les',\n",
-       "  'moeurs',\n",
-       "  'des',\n",
-       "  'habitans',\n",
-       "  ',',\n",
-       "  'la',\n",
-       "  'religion',\n",
-       "  ',',\n",
-       "  'les',\n",
-       "  'usages',\n",
-       "  ',',\n",
-       "  'arts',\n",
-       "  'et',\n",
-       "  'sciences',\n",
-       "  ',',\n",
-       "  'commerce',\n",
-       "  ',',\n",
-       "  'manufactures',\n",
-       "  '...',\n",
-       "  'par',\n",
-       "  'm.',\n",
-       "  'de',\n",
-       "  'la',\n",
-       "  'harpe'],\n",
-       " ['almanach', 'des', 'muses'],\n",
-       " ['art', '(', 'l', \"'\", ')', 'de', 'peindre', 'sur', \"l'émail\"],\n",
-       " ['apparat',\n",
-       "  'royal',\n",
-       "  ',',\n",
-       "  'dictionnaire',\n",
-       "  'françois',\n",
-       "  'et',\n",
-       "  'latin',\n",
-       "  ',',\n",
-       "  'enrichi',\n",
-       "  'des',\n",
-       "  'meilleures',\n",
-       "  'expressions',\n",
-       "  'en',\n",
-       "  \"l'une\",\n",
-       "  '&',\n",
-       "  \"l'autre\",\n",
-       "  'langue',\n",
-       "  ',',\n",
-       "  '&',\n",
-       "  'mis',\n",
-       "  'dans',\n",
-       "  'un',\n",
-       "  'ordre',\n",
-       "  'très-facile',\n",
-       "  '&',\n",
-       "  'très-méthodique']]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-d76ee2de2b56>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-d76ee2de2b56>\"\u001b[1;36m, line \u001b[1;32m7\u001b[0m\n\u001b[1;33m    stems =\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -233,9 +149,10 @@
     "for title in data[\"full_book_title\"]: # loop over titles\n",
     "    title = title.lower() # to lower case\n",
     "    tokens = nltk.word_tokenize(title, language='french') # tokenise\n",
+    "    stems = \n",
     "    title_words.append(tokens) # append to results list\n",
     "\n",
-    "title_words[0:4]"
+    "title_words[1:2]"
    ]
   },
   {
@@ -253,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
