new notebook, plus old one updated

--- a/word_vectors.ipynb
+++ b/word_vectors.ipynb
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word vector model imported. Import took 35343.8 milliseconds.\n"
+      "Word vector model imported. Import took 34.276118000000004 seconds.\n"
      ]
     }
    ],
@@ -56,12 +56,12 @@
     "tic = time.process_time()\n",
     "word_vectors = KeyedVectors.load_word2vec_format(file_path, binary = True)\n",
     "toc = time.process_time()\n",
-    "print (\"Word vector model imported. Import took \" + str(1000*(toc - tic)) + \" milliseconds.\")"
+    "print(f\"Word vector model imported. Import took {toc - tic:.2f} seconds.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "(300,)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
    "source": [
     "# Sanity check - does word_vectors return a 300-dimensional vector as intended?\n",
     "# (Actually it is a 1d numpy array)\n",
-    "word_vectors[\"écraser\"].shape"
+    "word_vectors[\"voltaire\"].shape"
    ]
   },
   {
@@ -643,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
